hphp/hack/test/typecheck/array_map_filter/array_map3.php
<?hh // partial

function take_ints(varray<int> $x) {}

function test(
  (function(int, string): bool) $f,
  Container<int> $x,
  Container<string> $y,
): void {
  take_ints(array_map($f, $x, $y));
}
